# adventofrust

./: Cargo.toml  LICENSE
2015/: Cargo.toml
2015/src/01/: main.rs
2015/src/04/: main.rs
2015/src/05/: main.rs
2021/: Cargo.toml
2022/: BENCHMARKS.md  Cargo.toml  README.md
2022/day01/src/: lib.rs
2022/day02/src/: lib.rs
2022/day03/src/: lib.rs
2022/day04/src/: lib.rs
2022/day05/src/: lib.rs
2022/day06/src/: lib.rs
2022/day07/src/: lib.rs
2022/day08/src/: lib.rs
2022/day09/src/: lib.rs
2022/day10/src/: lib.rs
2022/day11/src/: lib.rs
2022/day12/src/: lib.rs
2022/day13/src/: lib.rs
2022/day14/src/: lib.rs
2022/day15/src/: lib.rs
2022/day16/src/: lib.rs
2022/day17/src/: lib.rs
2022/day18/src/: lib.rs
2022/day19/src/: lib.rs
2022/day20/src/: lib.rs
2022/day21/src/: lib.rs
2022/day22/src/: lib.rs
2022/day23/src/: lib.rs
2022/day24/src/: lib.rs
2022/day25/src/: lib.rs
2022/runner/: Cargo.toml
2022/runner/benches/: 2022.rs
2022/runner/src/: main.rs
src/01/: main.rs
src/02/: main.rs
src/2015/02/: main.rs
src/2015/03/: main.rs
src/2021/01/: main.rs
src/2022/01/: main.rs
src/2022/02/: main.rs
src/2022/03/: main.rs
