[package]
name = "adventofrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#itertools = "0.10.1"

[[bin]]
name = "2021-01"
path = "src/2021/01/main.rs"

[[bin]]
name = "2021-02"
path = "src/2021/02/main.rs"

[[bin]]
name = "2015-01"
path = "src/2015/01/main.rs"

[[bin]]
name = "2015-02"
path = "src/2015/02/main.rs"