[package]
name = "adventofrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#itertools = "0.10.1"
md5 = "0.7.0"

[[bin]]
name = "2022-01"
path = "src/2022/01/main.rs"

[[bin]]
name = "2022-02"
path = "src/2022/02/main.rs"

[[bin]]
name = "2021-01"
path = "src/2021/01/main.rs"

[[bin]]
name = "2021-02"
path = "src/2021/02/main.rs"

[[bin]]
name = "2015-01"
path = "src/2015/01/main.rs"

[[bin]]
name = "2015-02"
path = "src/2015/02/main.rs"

[[bin]]
name = "2015-03"
path = "src/2015/03/main.rs"

[[bin]]
name = "2015-04"
path = "src/2015/04/main.rs"
