[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
day01 = { path = "../day01"}
day02 = { path = "../day02"}
day03 = { path = "../day03"}
day04 = { path = "../day04"}

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "2022"
harness = false